--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,4 @@
-.appWrapper{
+.appWrapper {
     margin: 0 auto;
     display: grid;
     width: 1200px;
@@ -11,5 +11,14 @@
     grid-gap: 10px;
 }
 
+.app-wrapper-content {
+    grid-area: c;
+    background-color: #114eaf;
+}
 
+.app-wrapper-content img {
+    height: 500px;
+    width: 850px;
+    padding: 8px;
+}
 
